# project3FromMiniTEst

./: CMakeLists.txt  project3FromMiniTEst.project
Generic/Resources/Shaders/: Fonts.glfx  LightPrePass.glfx  forward_rendering_standard.glfx  particle.fx  skybox.fx  skybox.glfx
Generic/Resources/Shaders/lib/: lighting.glfxh
Generic/Settings/: FbxImportationParameters_EntityStandard.xml
Generic/Settings/EventSystem/Events/: events.xml
cmake/: TargetBuildSAAS.cmake
cmake/Modules/: FindShSDK.cmake
src/Game/: CMakeLists.txt  Game.cpp
src/Plugins/Plugin/: CMakeLists.txt
